--- a/WebApplicationLogin/Views/Subjects/Create.cshtml
+++ b/WebApplicationLogin/Views/Subjects/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Subjects", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -36,6 +36,13 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.SClassID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SClassID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="control-label col-md-2">Zdejcie</div>
+            <div class="col-md-10">
+                <input type="file" name="file" />
             </div>
         </div>
 
