--- a/WebApplicationLogin/Views/Subjects/Index.cshtml
+++ b/WebApplicationLogin/Views/Subjects/Index.cshtml
@@ -20,6 +20,9 @@
         <th>
             @Html.DisplayNameFor(model => model.SClassID)
         </th>
+        <th>
+            Załącznik
+        </th>
         <th></th>
     </tr>
 
@@ -33,6 +36,16 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.SClassID)
+        </td>
+        <td>
+            @if (!string.IsNullOrEmpty(item.FilePath))
+            {
+                @Html.Label("tak")
+            }
+            else
+            {
+                @Html.Label("nie")
+            }
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.SubjectID }) |
