Downolad file nie dziala i wyklada sie na MySubject

--- a/WebApplicationLogin/Views/Subjects/Index.cshtml
+++ b/WebApplicationLogin/Views/Subjects/Index.cshtml
@@ -41,6 +41,8 @@
             @if (!string.IsNullOrEmpty(item.FilePath))
             {
                 @Html.Label("tak")
+                @Html.ActionLink("Download", "Download","tak")
+
             }
             else
             {
