Quiz Controller dodawanie, usuwanie, edycja, wyswietlanie listy, mapowanie na viewmodel QuizViewModel

--- a/WebApplicationLogin/Views/Quizs/Details.cshtml
+++ b/WebApplicationLogin/Views/Quizs/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplicationLogin.Models.Quiz
+﻿@model WebApplicationLogin.Models.ViewModels.QuizViewModel
 
 @{
     ViewBag.Title = "Details";
