--- a/WebApplicationLogin/Views/Quizs/Index.cshtml
+++ b/WebApplicationLogin/Views/Quizs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplicationLogin.Models.Quiz>
+﻿@model IEnumerable<WebApplicationLogin.Models.ViewModels.QuizViewModel>
 
 @{
     ViewBag.Title = "Index";
