--- a/WebApplicationLogin/Views/Quizs/Index.cshtml
+++ b/WebApplicationLogin/Views/Quizs/Index.cshtml
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.Timer)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.QuizID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.QuizID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.QuizID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
