Fix quizow, dodanie polaczenia user do quizu, lekko rozgrzebane

--- a/WebApplicationLogin/Views/Questions/Delete.cshtml
+++ b/WebApplicationLogin/Views/Questions/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplicationLogin.Models.Question
+﻿@model WebApplicationLogin.Models.ViewModels.QuestionViewModel
 
 @{
     ViewBag.Title = "Delete";
