--- a/WebApplicationLogin/Views/Questions/Create.cshtml
+++ b/WebApplicationLogin/Views/Questions/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplicationLogin.Models.Question
+﻿@model WebApplicationLogin.Models.ViewModels.QuestionViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -47,19 +47,19 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.userID, "userID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("userID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.userID, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.QuizID, "QuizID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.QuizId, "QuizId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("QuizID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.QuizID, "", new { @class = "text-danger" })
+                @Html.DropDownList("QuizId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.QuizId, "", new { @class = "text-danger" })
             </div>
         </div>
 
