--- a/WebApplicationLogin/Views/SClasses/Delete.cshtml
+++ b/WebApplicationLogin/Views/SClasses/Delete.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Plan.Nazwa)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Plan.Nazwa)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.user.Name)
         </dt>
 
