--- a/WebApplicationLogin/Views/Subjects/Create.cshtml
+++ b/WebApplicationLogin/Views/Subjects/Create.cshtml
@@ -1,18 +1,17 @@
 ﻿@model WebApplicationLogin.Models.Subject
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Nowy przedmiot";
 }
 
-<h2>Create</h2>
+<h2>Nowy przedmiot</h2>
 
 
-@using (Html.BeginForm("Create", "Subjects", FormMethod.Post, new { enctype = "multipart/form-data" })) 
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Subject</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -24,38 +23,23 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MySubjectID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FilePath, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MySubjectID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MySubjectID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.SClassID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SClassID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SClassID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="control-label col-md-2">Zdejcie</div>
-            <div class="col-md-10">
-                <input type="file" name="file" />
+                @Html.EditorFor(model => model.FilePath, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FilePath, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Utwórz" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wróć do listy", "Index")
 </div>
 
 @section Scripts {
