--- a/WebApplicationLogin/Views/Subjects/Details.cshtml
+++ b/WebApplicationLogin/Views/Subjects/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model WebApplicationLogin.Models.Subject
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Szczegóły";
 }
 
-<h2>Details</h2>
+<h2>Szczegóły</h2>
 
 <div>
-    <h4>Subject</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,24 +18,16 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.MySubjectID)
+            @Html.DisplayNameFor(model => model.FilePath)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.MySubjectID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SClassID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SClassID)
+            @Html.DisplayFor(model => model.FilePath)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.SubjectID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edytuj", "Edit", new { id = Model.SubjectID }) |
+    @Html.ActionLink("Wróć do listy", "Index")
 </p>
