--- a/WebApplicationLogin/Views/Subjects/Edit.cshtml
+++ b/WebApplicationLogin/Views/Subjects/Edit.cshtml
@@ -1,18 +1,17 @@
 ﻿@model WebApplicationLogin.Models.Subject
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edytuj";
 }
 
-<h2>Edit</h2>
+<h2>Edytuj</h2>
 
 
-@using (Html.BeginForm("Edit", "Subjects", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Subject</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.SubjectID)
@@ -26,31 +25,23 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MySubjectID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FilePath, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MySubjectID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MySubjectID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.SClassID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SClassID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SClassID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.FilePath, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FilePath, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Zapisz" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wróć do listy", "Index")
 </div>
 
 @section Scripts {
