--- a/WebApplicationLogin/Views/Subjects/Index.cshtml
+++ b/WebApplicationLogin/Views/Subjects/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<WebApplicationLogin.Models.Subject>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista przedmiotów";
 }
 
-<h2>Index</h2>
+<h2>Lista przedmiotów</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Dodaj nowy", "Create")
 </p>
 <table class="table">
     <tr>
@@ -15,13 +15,7 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MySubjectID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SClassID)
-        </th>
-        <th>
-            Załącznik
+            @Html.DisplayNameFor(model => model.FilePath)
         </th>
         <th></th>
     </tr>
@@ -32,27 +26,12 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.MySubjectID)
+            @Html.DisplayFor(modelItem => item.FilePath)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.SClassID)
-        </td>
-        <td>
-            @if (!string.IsNullOrEmpty(item.FilePath))
-            {
-                @Html.Label("tak")
-                @Html.ActionLink("Download", "Download","tak")
-
-            }
-            else
-            {
-                @Html.Label("nie")
-            }
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.SubjectID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SubjectID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SubjectID })
+            @Html.ActionLink("Edytuj", "Edit", new { id=item.SubjectID }) |
+            @Html.ActionLink("Szczegół", "Details", new { id=item.SubjectID }) |
+            @Html.ActionLink("Usuń", "Delete", new { id=item.SubjectID })
         </td>
     </tr>
 }
