--- a/WebApplicationLogin/Views/Questions/Edit.cshtml
+++ b/WebApplicationLogin/Views/Questions/Edit.cshtml
@@ -1,8 +1,11 @@
-﻿@model WebApplicationLogin.Models.ViewModels.QuestionViewModel
+﻿@using WebApplicationLogin.Models.ViewModels
+@model QuestionViewModel
 
 @{
     ViewBag.Title = "Edit";
 }
+
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 
 <h2>Edit</h2>
 
@@ -15,7 +18,7 @@
         <h4>Question</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.QuestionID)
+        @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -58,10 +61,10 @@
         </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.QuizId, "QuizId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.QuizIds, "QuizIds", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("QuizId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.QuizId, "", new { @class = "text-danger" })
+                @Html.DropDownList("QuizIds", new MultiSelectList(new List<QuizViewModel>(), "id", "name", Model.QuizIds), new { multiple = "multiple" })
+                @Html.ValidationMessageFor(model => model.QuizIds, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -80,3 +83,30 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+
+<script>
+
+    var getQuizsUrl = '@Url.Action("GetQuizs","Questions")';
+    function getQuizs() {
+        $.ajax({
+            type: 'GET',
+            url: getQuizsUrl,
+            datatype: "Json",
+            success: function (data) {
+                var ddl = $('#QuizIds');
+                ddl.empty();
+                $(data).each(function () {
+                    $("#QuizIds").html("");
+                    $.each(data, function (index, item) {
+                        ddl.append(new Option(item.Text, item.Value));
+                    });
+                });
+            }
+        });
+    }
+    $(document).ready(function () {
+        getQuizs();
+    });
+
+</script>
