Zmiany w kontrolerach widokach i modelach, nowa baza podejscie 3

--- a/WebApplicationLogin/Views/Grades/Details.cshtml
+++ b/WebApplicationLogin/Views/Grades/Details.cshtml
@@ -19,19 +19,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.user.Name)
+            @Html.DisplayNameFor(model => model.Student.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.user.Name)
+            @Html.DisplayFor(model => model.Student.Name)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Subject.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.Subject.Name)
         </dd>
 
         <dt>
@@ -43,19 +43,19 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.DateGrade)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.DateGrade)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MySubjectID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MySubjectID)
         </dd>
 
     </dl>
