--- a/WebApplicationLogin/Views/SClasses/Details.cshtml
+++ b/WebApplicationLogin/Views/SClasses/Details.cshtml
@@ -19,11 +19,12 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.user.Name)
+            @*@Html.DisplayNameFor(model => model.Teacher.Name)*@
+            Wychowawca
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.user.Name)
+            @Html.DisplayFor(model => model.Teacher.Name)
         </dd>
 
         <dt>
@@ -32,14 +33,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.userID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.userID)
         </dd>
 
     </dl>
