--- a/WebApplicationLogin/Views/Students/Details.cshtml
+++ b/WebApplicationLogin/Views/Students/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplicationLogin.Models.GradeList
+﻿@model WebApplicationLogin.Models.Student
 
 @{
     ViewBag.Title = "Details";
@@ -7,15 +7,15 @@
 <h2>Details</h2>
 
 <div>
-    <h4>GradeList</h4>
+    <h4>Student</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Value)
+            @Html.DisplayNameFor(model => model.SClass.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Value)
+            @Html.DisplayFor(model => model.SClass.Name)
         </dd>
 
         <dt>
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.GradeListID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.StudentID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
