--- a/WebApplicationLogin/Views/Grades/Index.cshtml
+++ b/WebApplicationLogin/Views/Grades/Index.cshtml
@@ -15,19 +15,21 @@
             @Html.DisplayNameFor(model => model.GradeList.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.user.Name)
+            @*@Html.DisplayNameFor(model => model.Student.Name)*@
+            @Html.ActionLink("Uczeń", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Subject.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Weight)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DateGrade)
+            @Html.DisplayNameFor(model => model.Description)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MySubjectID)
+            @*@Html.DisplayNameFor(model => model.DateGrade)*@
+            @Html.ActionLink("Data wystawienia", "Index", new { sortOrder = ViewBag.DateSortParm })
         </th>
         <th></th>
     </tr>
@@ -38,19 +40,19 @@
             @Html.DisplayFor(modelItem => item.GradeList.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.user.Name)
+            @Html.DisplayFor(modelItem => item.Student.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Description)
+            @Html.DisplayFor(modelItem => item.Subject.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Weight)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.DateGrade)
+            @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.MySubjectID)
+            @Html.DisplayFor(modelItem => item.DateGrade)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.GradeID }) |
