--- a/WebApplicationLogin/Views/SClasses/Delete.cshtml
+++ b/WebApplicationLogin/Views/SClasses/Delete.cshtml
@@ -20,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.user.Name)
+            @Html.DisplayNameFor(model => model.Teacher.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.user.Name)
+            @Html.DisplayFor(model => model.Teacher.Name)
         </dd>
 
         <dt>
@@ -33,14 +33,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.userID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.userID)
         </dd>
 
     </dl>
