--- a/WebApplicationLogin/Views/Students/Delete.cshtml
+++ b/WebApplicationLogin/Views/Students/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplicationLogin.Models.GradeList
+﻿@model WebApplicationLogin.Models.Student
 
 @{
     ViewBag.Title = "Delete";
@@ -8,15 +8,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>GradeList</h4>
+    <h4>Student</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Value)
+            @Html.DisplayNameFor(model => model.SClass.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Value)
+            @Html.DisplayFor(model => model.SClass.Name)
         </dd>
 
         <dt>
