--- a/WebApplicationLogin/Views/Students/Index.cshtml
+++ b/WebApplicationLogin/Views/Students/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplicationLogin.Models.GradeList>
+﻿@model IEnumerable<WebApplicationLogin.Models.Student>
 
 @{
     ViewBag.Title = "Index";
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Value)
+            @Html.DisplayNameFor(model => model.SClass.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -23,15 +23,15 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Value)
+            @Html.DisplayFor(modelItem => item.SClass.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.GradeListID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.GradeListID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.GradeListID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.StudentID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.StudentID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.StudentID })
         </td>
     </tr>
 }
