--- a/WebApplicationLogin/Views/Subjects/Delete.cshtml
+++ b/WebApplicationLogin/Views/Subjects/Delete.cshtml
@@ -8,6 +8,7 @@
 
 <h3>Czy na pewno chcesz usunąć przedmiot z bazy?</h3>
 <div>
+    <h4>Subject</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
