--- a/WebApplicationLogin/Views/Teachers/Delete.cshtml
+++ b/WebApplicationLogin/Views/Teachers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplicationLogin.Models.MySubject
+﻿@model WebApplicationLogin.Models.Teacher
 
 @{
     ViewBag.Title = "Delete";
@@ -8,23 +8,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>MySubject</h4>
+    <h4>Teacher</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Subject.Name)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Subject.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.user.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.user.Name)
+            @Html.DisplayFor(model => model.Name)
         </dd>
 
     </dl>
