--- a/WebApplicationLogin/Views/Teachers/Details.cshtml
+++ b/WebApplicationLogin/Views/Teachers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplicationLogin.Models.GradeList
+﻿@model WebApplicationLogin.Models.Teacher
 
 @{
     ViewBag.Title = "Details";
@@ -7,17 +7,9 @@
 <h2>Details</h2>
 
 <div>
-    <h4>GradeList</h4>
+    <h4>Teacher</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Value)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Value)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -29,6 +21,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.GradeListID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.TeacherID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
