--- a/WebApplicationLogin/Views/Roles/ManageUserRoles.cshtml
+++ b/WebApplicationLogin/Views/Roles/ManageUserRoles.cshtml
@@ -2,62 +2,71 @@
     ViewBag.Title = "ManageUserRoles";
 }
 
-<h2>Manage User Roles</h2>
-@Html.ActionLink("Create New Role", "Create") | @Html.ActionLink("Manage User Role", "ManageUserRoles")
+
+<h2>Zarządzanie rolami</h2>
+@Html.ActionLink("Utwórz nową rolę", "Create")
+<hr />
+<div class="col-md-6">
+    <h3>Role użytkownika</h3>
+    @using (Html.BeginForm("GetRoles", "Roles"))
+    {
+        @Html.AntiForgeryToken()
+        <p>
+            Login : @Html.TextBox("UserName")
+        </p>
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Zobacz" class="btn btn-default" />
+            </div>
+
+    }
+
+    @if (ViewBag.RolesForThisUser != null)
+    {
+        <div>
+            <ol>
+                @foreach (string s in ViewBag.RolesForThisUser)
+                {
+                    <li>@s</li>
+                }
+            </ol>
+        </div>
+    }
+</div>
+<hr />
+<div class="col-md-6">
+    <h2>Dodaj rolę użytkownikowi</h2>
+
+    @using (Html.BeginForm("RoleAddToUser", "Roles"))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true)
+
+        <p>
+            Login : @Html.TextBox("UserName")
+            Rola: @Html.DropDownList("RoleName", (IEnumerable<SelectListItem>)ViewBag.Roles, "Wybierz ...")
+        </p>
+
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Dodaj" class="btn btn-default" />
+        </div>
+    }
+</div>
 <hr />
 
-<h2>Role Add to User</h2>
+<div class="col-md-6">
+    <h3>Usuń rolę użytkownikowi</h3>
 
-@using (Html.BeginForm("RoleAddToUser", "Roles"))
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+    @using (Html.BeginForm("DeleteRoleForUser", "Roles"))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true)
 
-    <p>
-        Username : @Html.TextBox("UserName")
-        Role Name: @Html.DropDownList("RoleName", (IEnumerable<SelectListItem>)ViewBag.Roles, "Select ...")
-
-    </p>
-
-    <input type="submit" value="Save" />
-}
-<hr />
-<h3>Get Roles for a User</h3>
-@using (Html.BeginForm("GetRoles", "Roles"))
-{
-    @Html.AntiForgeryToken()
-    <p>
-        Username : @Html.TextBox("UserName")
-        <input type="submit" value="Get Roles for this User" />
-    </p>
-}
-
-@if (ViewBag.RolesForThisUser != null)
-{
-    <div style="background-color:yellow;">
-        <h3>Roles for this user </h3>
-        <ol>
-            @foreach (string s in ViewBag.RolesForThisUser)
-            {
-                <li>@s</li>
-            }
-        </ol>
-    </div>
-}
-
-<hr />
-<h3>Delete A User from a Role</h3>
-
-@using (Html.BeginForm("DeleteRoleForUser", "Roles"))
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
-
-    <p>
-        Username : @Html.TextBox("UserName")
-        Role Name: @Html.DropDownList("RoleName", (IEnumerable<SelectListItem>)ViewBag.Roles, "Select ...")
-
-    </p>
-
-    <input type="submit" value="Delete this user from Role" />
-}
+        <p>
+            Login : @Html.TextBox("UserName")
+            Rola: @Html.DropDownList("RoleName", (IEnumerable<SelectListItem>)ViewBag.Roles, "Wybierz ...")
+        </p>
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Usuń" class="btn btn-default" />
+        </div>
+    }
+</div>
