--- a/WebApplicationLogin/Views/Roles/Edit.cshtml
+++ b/WebApplicationLogin/Views/Roles/Edit.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Edit Role</h2>
 
-@Html.ActionLink("List Roles", "Index") | @Html.ActionLink("Manage User Role", "ManageUserRoles")
+@Html.ActionLink("Lista", "Index") | @Html.ActionLink("Zarządzanie", "ManageUserRoles")
 <hr />
 @using (Html.BeginForm())
 {
@@ -13,10 +13,10 @@
     @Html.ValidationSummary(true)
     @Html.HiddenFor(model => model.Id)
     <div>
-        Role name
+        Rola
     </div>
     <p>
         @Html.TextBoxFor(model => model.Name)
     </p>
-    <input type="submit" value="Save" />
+    <input type="submit" value="Zapisz zmiany" class="btn btn-default" />
 }
