--- a/WebApplicationLogin/Views/Shared/ParentLayout.cshtml
+++ b/WebApplicationLogin/Views/Shared/ParentLayout.cshtml
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse navbar-menubuilder">
                 <ul class="nav navbar-nav navbar-left">
                     <li>@Html.ActionLink("Uczniowie", "Index", "Students", routeValues: null, htmlAttributes: new { id = "registerLink" }) </li>
-                    <li>@Html.ActionLink("Klasy", "Index", "SClassed", routeValues: null, htmlAttributes: new { id = "registerLink" }) </li>
+                    <li>@Html.ActionLink("Klasy", "Index", "SClasses", routeValues: null, htmlAttributes: new { id = "registerLink" }) </li>
                     <li>@Html.ActionLink("Oceny", "Index", "Grades", routeValues: null, htmlAttributes: new { id = "registerLink" }) </li>
                 </ul>
                 @Html.Partial("_LoginPartial")
