--- a/WebApplicationLogin/Views/_ViewStart.cshtml
+++ b/WebApplicationLogin/Views/_ViewStart.cshtml
@@ -1,3 +1,26 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@*@{
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }*@
+
+@{
+    if (this.User.IsInRole("Admin") || !this.User.Identity.IsAuthenticated)
+    {
+        Layout = "~/Views/Shared/AdminLayout.cshtml";
+    }
+    if (this.User.IsInRole("Teacher") || !this.User.Identity.IsAuthenticated)
+    {
+        Layout = "~/Views/Shared/TeacherLayout.cshtml";
+    }
+    if (this.User.IsInRole("Parent") || !this.User.Identity.IsAuthenticated)
+    {
+        Layout = "~/Views/Shared/ParentLayout.cshtml";
+    }
+    if (this.User.IsInRole("Student") || !this.User.Identity.IsAuthenticated)
+    {
+        Layout = "~/Views/Shared/ParentLayout.cshtml";
+    }
+    else
+    {
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
 }
