uporządkowane views przy logowaniu/rejestracji

--- a/WebApplicationLogin/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/WebApplicationLogin/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -3,11 +3,14 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h1>Zajrzyj do swojej skrzynki!</h1>
 </hgroup>
-<div>
+<div >
     <p>
-        Please check your email to reset your password.
+        Na podany adres email został wysłany link do zmiany hasła
     </p>
+    <div style="float:right; margin-top:2px">
+        <img src="~/Content/emailconfirm.png" style="width:200px;height:200px;" />
+    </div>
 </div>
 	
