--- a/WebApplicationLogin/Views/Account/ForgotPasswordError.cshtml
+++ b/WebApplicationLogin/Views/Account/ForgotPasswordError.cshtml
@@ -3,10 +3,9 @@
     ViewBag.Title = "ForgotPasswordError";
 }
 
-<h2>ForgotPasswordError</h2>
 
 <div>
     <p>
-        Email address doesn't exists in database.
+        Adres email nie istnieje w bazie.
     </p>
 </div>
