--- a/WebApplicationLogin/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/WebApplicationLogin/Views/Account/ResetPasswordConfirmation.cshtml
@@ -3,10 +3,10 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h1>Hasło zostało zmienione</h1>
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Przejdź do @Html.ActionLink("logowania", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
