--- a/WebApplicationLogin/Views/Account/ResetPassword.cshtml
+++ b/WebApplicationLogin/Views/Account/ResetPassword.cshtml
@@ -3,12 +3,11 @@
     ViewBag.Title = "Reset password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>Resetowanie hasła</h2>
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
@@ -32,7 +31,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
+            <input type="submit" class="btn btn-default" value="Resetuj" />
         </div>
     </div>
 }
